Fixed views and overlaps.

--- a/src/app/layout/navbar/navbar.component.css
+++ b/src/app/layout/navbar/navbar.component.css
@@ -1,7 +1,7 @@
 .navbar-container {
     background-color: var(--color_white);
     box-shadow: 0 2px 4px rgba(79, 79, 79, 0.5);
-    position: fixed;
+    position: sticky;
     top: 0;
     height: 80px;
     width: 100%;
@@ -11,6 +11,7 @@
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
+    overflow: hidden;
 }
 
 img {
